--- a/index.html
+++ b/index.html
@@ -6,29 +6,102 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>HTML</title>
+  <title>Wether App</title>
 
   <!-- HTML -->
-
-
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-<div id="form">
-   <input id="search" type="text">
-   <input type="submit" value="submit">
-</div>
-<div class="container">
-  <p class="location"></p>
-  <p class="temp_c"></p>
-  <p class="country"></p>
-  <p class="tz"></p>
-  <p class="time"></p>
-</div>
+  <div class="form">
+    <input id="city" placeholder="Enter Country: " type="text">
+    <button type="submit">Go</button>
+  </div>
+
+
+  <div class="container">
+    <div class="data">
+      <div class="t">
+        <div class="temp"> </div>
+        <img class="icon" src="" alt="icon">
+
+      </div>
+      <div class="info">
+        <div class="load"></div>
+        <div class="err">
+          <h1>Error </h1>
+        <button>Ok</button>
+        </div>
+        <div>
+          <p>City</p>
+          <p class="city"></p>
+        </div>
+        <div>
+          <p>Country</p>
+          <p class="country"></p>
+        </div>
+        <div>
+          <p>Wind Speed</p>
+          <p class="windspd"></p>
+        </div>
+        <div>
+          <p>Weather</p>
+          <p class="weather"></p>
+        </div>
+        <div>
+          <p>Wind direction</p>
+          <p class="winddir"></p>
+        </div>
+        <div>
+          <p>Pressure</p>
+          <p class="pres"></p>
+        </div>
+        <div>
+          <p>Clouds</p>
+          <p class="cloud"></p>
+        </div>
+        <div>
+          <p>Dew point</p>
+          <p class="dewpt"></p>
+        </div>
+
+        <div>
+          <p>Humidity</p>
+          <p class="rh"></p>
+        </div>
+        <div>
+          <p>Visibility</p>
+          <p class="vis"></p>
+        </div>
+
+        <div>
+          <p>Sea level pres</p>
+          <p class="slp"></p>
+        </div>
+
+        <div>
+          <p>Solar Radiation</p>
+          <p class="solar_rad"></p>
+        </div>
+        <div>
+          <p>Air Quality</p>
+          <p class="aqi"></p>
+        </div>
+        <div>
+          <p>UV</p>
+          <p class="uv"></p>
+        </div>
+        <div>
+          <p> Part of day</p>
+          <p class="pod"></p>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- Project -->
-  <script src="main.js"></script>
+  <script src="js/main.js" type="module"></script>
+  <script src="js/fun.js" type="module"></script>
 </body>
 
 </html>
