--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
           <p class="pod"></p>
         </div>
       </div>
+
+      <div class="future">
+      </div>
     </div>
   </div>
   <!-- Project -->
