--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       </div>
       <div class="info">
-        <div class="load"></div>
+        <div class="load"><p>loading</p></div>
         <div class="err">
           <h1>Error </h1>
           <button>Ok</button>
@@ -98,8 +98,7 @@
         </div>
       </div>
 
-      <div class="future">
-      </div>
+      <div class="nextdays"> </div>
     </div>
   </div>
   <!-- Project -->
