--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
       </div>
       <div class="info">
-        <div class="load"><p>loading</p></div>
+        <div class="load">
+          <p>loading</p>
+        </div>
         <div class="err">
           <h1>Error </h1>
           <button>Ok</button>
