--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+ <meta name="description" content="Weather App">
   <title>Wether App</title>
 
+<link rel="apple-touch-icon" href="https://www.weatherbit.io/static/img/icons/a04n.png">
   <!-- HTML -->
   <!-- Custom Styles -->
   <link rel="stylesheet" href="css/style.css">
@@ -17,6 +18,7 @@
   <div class="form">
     <input id="city" placeholder="Enter Country: " type="text">
     <button type="submit">Go</button>
+    <div><button class="lo">Location</button></div>
   </div>
 
 
