--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
- <meta name="description" content="Weather App">
+  <meta name="description" content="Weather App">
   <title>Wether App</title>
 
-<link rel="apple-touch-icon" href="https://www.weatherbit.io/static/img/icons/a04n.png">
+  <link rel="apple-touch-icon" href="https://www.weatherbit.io/static/img/icons/a04n.png">
   <!-- HTML -->
   <!-- Custom Styles -->
   <link rel="stylesheet" href="css/style.css">
@@ -18,7 +18,7 @@
   <div class="form">
     <input id="city" placeholder="Enter Country: " type="text">
     <button type="submit">Go</button>
-    <div><button class="lo">Location</button></div>
+    <button class="lo">Location</button>
   </div>
 
 
@@ -26,9 +26,9 @@
     <div class="data">
       <div class="t">
         <div class="temp"></div>
-        <img class="icon" src="" alt="icon">
-
+        <img class="icon" alt="icon">
       </div>
+
       <div class="info">
         <div class="load">
           <p>loading</p>
@@ -102,8 +102,9 @@
         </div>
       </div>
 
-      <div class="nextdays"> </div>
     </div>
+    <div class="nextdays"> </div>
+
   </div>
   <!-- Project -->
   <script src="js/main.js" type="module"></script>
