--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
 </head>
 
 <body>
-  <div class="form">
+   <div class="container">
+     <div class="form">
     <input id="city" placeholder="Enter Country: " type="text">
     <button type="submit">Go</button>
     <button class="lo">Location</button>
   </div>
-
-
-  <div class="container">
-    <div class="data">
+    <div class="context">
+      <div class="data">
       <div class="t">
         <div class="temp"></div>
         <img class="icon" alt="icon">
@@ -103,9 +102,9 @@
       </div>
 
     </div>
-    <div class="nextdays"> </div>
-
-  </div>
+      <div class="nextdays"> </div>
+    </div>
+   </div>
   <!-- Project -->
   <script src="js/main.js" type="module"></script>
   <script src="js/fun.js" type="module"></script>
